8808 nvme: Software Progress Marker feature is optional Reviewed by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org> Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Dan Fields <dan.fields@nexenta.com> Reviewed by: Cynthia Eastham <cynthia.eastham@nexenta.com> Approved by: Gordon Ross <gwr@nexenta.com>